# browser-agent

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  specs.json
browser_agent/: __init__.py
browser_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
browser_agent/actions/: impl.py  params.py
browser_agent/actions/sites/: demo.py
browser_agent/cli/: main.py
browser_agent/core/: action.py  errors.py  registry.py  result.py  settings.py
browser_agent/core/controller/: runner.py
browser_agent/io/: driver.py  playwright_driver.py
browser_agent/reporting/: schemas.py  writer.py
docs/pr/: day2_daily_report.md
specs/: common_demo.json  job_urls.txt  smoke.json
tests/: test_sanity.py  test_smoke_e2e.py
tests/fixtures/: smoke.html
